Portfolio & Settings integration + Strategy enhancements\n\n- Add PortfolioManager with ArcticDB-backed per-strategy storage and consolidation\n- New portfolio API routes and FX cache utilities\n- Settings routes and ArcticDB manager updates (fixed path, libraries)\n- Integrate PortfolioManager and lazy Arctic client into StrategyManager\n- TradeManager: async improvements (qualify, futures roll)\n- Frontend: PortfolioView wiring, Settings dialog, icons, API client updates\n- Docs: expanded README architecture and roadmap\n- Housekeeping: .gitignore tweaks, remove backend/.env.example

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,16 @@
-fastapi
-uvicorn[standard]
-ib_async
+uvicorn==0.30.6
+fastapi==0.115.8
+starlette==0.45.3
+anyio==4.7.0
+h11==0.14.0
+websockets==15.0
+watchfiles==1.0.3
+
+# IB stack pinned to base
+ib_async==1.0.3
+eventkit==1.0.1
+
+# Other deps
 arcticdb
-pydantic
-python-dotenv
+pydantic==2.10.6
+python-dotenv==1.0.0
